==============
lxml changelog
==============

Under development
=================

Features added
--------------

* Entity support through an ``Entity`` factory and element classes. XML
  parsers now have a ``resolve_entities`` keyword argument that can be set to
  False to keep entities in the document.

* ``column`` field on error log entries to accompany the ``line`` field

* Error specific messages in XPath parsing and evaluation
  NOTE: for evaluation errors, you will now get an XPathEvalError instead of
  an XPathSyntaxError.  To catch both, you can except on ``XPathError``

* The regular expression functions in XPath now support passing a node-set
  instead of a string

* Extended type annotation in objectify: new ``xsiannotate()`` function

* EXSLT RegExp support in standard XPath (not only XSLT)

Bugs fixed
----------

* The XML parser did not report undefined entities as error

* The text in exceptions raised by XML parsers, validators and XPath
  evaluators now reports the first error that occurred instead of the last

* passing '' as XPath namespace prefix did not raise an error

* Thread safety in XPath evaluators

Other changes
-------------

* major refactoring in XPath/XSLT extension function code


1.3 (2007-06-24)
================

Features added
--------------

* Module ``lxml.pyclasslookup`` module implements an Element class lookup
  scheme that can access the entire tree in read-only mode to help determining
  a suitable Element class

* Parsers take a ``remove_comments`` keyword argument that skips over comments

* ``parse()`` function in ``objectify``, corresponding to ``XML()`` etc.

* ``Element.addnext(el)`` and ``Element.addprevious(el)`` methods to support
  adding processing instructions and comments around the root node

* ``Element.attrib`` was missing ``clear()`` and ``pop()`` methods

* Extended type annotation in objectify: cleaner annotation namespace setup
  plus new ``deannotate()`` function
